--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     background-position: center center;
     background-size: cover;
     color: black;
-    text-align: center;
+    
 }
 
 header {
@@ -36,12 +36,14 @@ header {
 }
 
 #introduccion {
+    text-align: center;
     padding: 15px;
     margin-left: 20%;
     margin-right: 20%;
 }
 
 #list {
+    text-align: center;
     padding: 15px;
     margin-left: 35%;
     margin-right: 35%;
@@ -67,19 +69,38 @@ header {
     margin-top: 10%;
 }
 
+#sponsors {
+    align-items: center;
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+.aus {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+footer {
+    align-items: center;
+    text-align: center;
+    margin-top: 10%;
+}
+
 @media(max-width: 720px)  {
-    
-    body {
-        text-align: left;
-    }
 
     #introduccion {
+        text-align: left;
         margin-left: 0%;
         margin-right: 0%;
 
     }
 
     #list {
+        text-align: left;
         margin-left: 0%;
         margin-right: 0%;
     }
