--- a/style.css
+++ b/style.css
@@ -70,18 +70,25 @@ header {
 }
 
 #sponsors {
-    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     text-align: center;
     margin-bottom: 10%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .aus {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-bottom: 2%;
+}
+
+.aus img {
+    margin-bottom: 6%;
 }
 
 footer {
